--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,4 +1,7 @@
 .card {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  border: 1px solid green;
+  width: clamp(10rem, 20rem, 30rem);
 }
