--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid green;
+  border: 5px solid rgb(2, 2, 71);
+  border-radius: 20px;
+  padding: 2rem;
   width: clamp(10rem, 20rem, 30rem);
 }
