--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,19 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  gap: 1rem;
+}
+
+#btn-submit {
+  margin: 1rem;
+}
